--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,52 @@
-
-
-.App {
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-  margin-top: 50px;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.add-task {
-  margin-bottom: 20px;
+body{
+  background-color:#fff ;
 }
-
-.task-item {
+.main-container{
+  display: flex;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
+}
+.center-container{
+  height: 500px;
+  width: 350px;
+}
+.app-heading{
+  padding: 4px;
+  color: white;  
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-transform: uppercase;
+  text-align: center;
+}
+.input-container{
+  display: flex;
+  justify-content: center;
   margin-bottom: 10px;
 }
-
-.task-item input[type="checkbox"] {
-  margin-right: 10px;
+.list-item{
+  list-style-type: none;
+  border:2px solid rgb(161, 158, 158);  
+  padding:3px;
+  padding-left: 5px;
+  border-radius: 5px; 
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 10px;
 }
-
-.task-item button {
-  margin-left: 10px;
-  padding: 5px 10px;
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.icons{
+  position: absolute;
+  right: 10px;
 }
-
-.task-item button:hover {
-  background-color: #cc0000;
+.icons i:hover{
+  transform: scale(1.2);  
 }
-
-.task-item span {
-  flex: 1;
-  word-break: break-word;
+.icon-delete:hover{
+  color: red;
 }
